   (egj, tcoulter)

 * Fixed broken interaction with Plone's Link Integrity Checker, which 
   was causing erroneous warnings about link integrity to be displayed to
   users in some circumstances of project deletion. (#2825) (egj, tcoulter)

 * Project members are now listed on the manage-team page in alphabetical
   order, case insensitive, sorted on username. (#2751) (egj)

Also various Listen i18n fixes -- need to catalog those here and/or there.


0.17.0 (2009-05-09)
===================

Data Migrations:

 * Run the upgrades through 0.17 using the portal_setup tool (see 0.15.0 
   change notes, below, for instructions) after you upgrade to 0.17. There
   are two migrations: one to mark "project-discussion" mailing lists with
   a marker interface (about which see "Mailing lists now support..." below)
   and another to retitle member areas (#2779 and see below)


Features Added:

 * Wiki pages now have a view at `latest-change` which redirects to the
   `version_compare` page displaying the most recent edit on the page. It
   is linked from the "last modified" text in the tabs on the page's standard
   view. (#2781) (egj)

 * A portal status message now notifies users when their wiki content
   is stripped out because of the allowed_hosts whitelist, a frequent
   point of confusion for end users. (#2793) (egj)

 * Paginated search results now include a "jump to page" option (#1488) (egj)

 * All contexts now have a view at `searching` which returns a paginated
   list of all contents published underneath the given context. It is not
   yet linked to anywhere in the UI. (egj)

 * Rename 'pages' back to 'wiki' (#2749) (egj)

 * Mailing lists now support an ISyncWithProjectMembership marker interface;
   any list marked with this interface will automatically subscribe and
   unsubscribe members as they are added to or removed from a project.
   This used to only work for mailing lists with a specific id based on