@@ -214,7 +214,8 @@ Search for members, explicitly specifying full name sort::
    >>> people = view.search_by_letter('M', sort_by='exact_getFullname')
    >>> names = [p.getFullname for p in people]
    >>> names
-   ['Member Four', 'Member One', 'Member Three', 'Member Two']
+   ['M\xc3\xabmber Four', 'M\xc3\xabmber O\xc3\xb1e', 'M\xc3\xabmber Three', 'M\xc3\xabmber Two']
+
 
 Traversing to the correct people search url should yield the same class
 XXX currently is a name, because we don't have a special interface for
