@@ -155,7 +155,7 @@ the project's contents listing to "Hobbes"::
     ...         'new1_title': 'Hobbes',
     ...         'item_type': 'pages'}
     >>> request.form = form
-    >>> unicode(view())
+    >>> unicode(view(), encoding='utf-8')
     u'...'
     >>> page.Title()
     'Hobbes'
